--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: ./.github/actions/setup-and-cache
 
   # ---------- Build ----------------------------------------------------------
-  test:
+  build-web:
     name: Build Ressaite Web
     needs: init
     runs-on: ubuntu-latest
