--- a/.github/actions/setup-and-cache/action.yaml
+++ b/.github/actions/setup-and-cache/action.yaml
@@ -9,7 +9,7 @@ inputs:
   lockfile:
     description: 'Lockfile path/name to define the cache key'
     required: true
-    default: package.lock
+    default: package-lock.json
 
 outputs:
   cache-hit:
@@ -35,10 +35,10 @@ runs:
           ressaite-api/node_modules
           ressaite-core/node_modules
           ressaite-web/node_modules
-        key: ressaite-dependencies-${{ inputs.node-version }}-${{ hashFiles(inputs.lockfile) }}
+        key: ressaite-dependencies-${{ inputs.node-version }}-${{ hashFiles(inputs.lockfile) }}-v1
 
 
     - name: Install dependencies (if necessary)
       if: steps.node-cache.outputs.cache-hit != 'true'
-      run: npm install
+      run: npm install --workspaces
       shell: bash
