--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -42,7 +42,7 @@ jobs:
 
   # ---------- Build ----------------------------------------------------------
   test:
-    name: Test ressaite-api
+    name: Test all packages
     needs: init
     runs-on: ubuntu-latest
 
@@ -53,4 +53,4 @@ jobs:
       - name: Load Cache
         uses: ./.github/actions/setup-and-cache
 
-      - run: cd ressaite-api && npm run test
+      - run: npm run test:all
