--- a/.github/actions/setup-and-cache/action.yaml
+++ b/.github/actions/setup-and-cache/action.yaml
@@ -40,5 +40,7 @@ runs:
 
     - name: Install dependencies (if necessary)
       if: steps.node-cache.outputs.cache-hit != 'true'
-      run: npm install --workspaces
+      # --workspaces              : https://docs.npmjs.com/cli/v8/commands/npm-install?v=true#workspaces
+      # --include-workspace-root  : https://docs.npmjs.com/cli/v8/commands/npm-install?v=true#include-workspace-root
+      run: npm install --workspaces --include-workspace-root
       shell: bash
