--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: ./.github/actions/setup-and-cache
 
   # ---------- Build ----------------------------------------------------------
-  test:
+  build-web:
     name: Build Ressaite Web
     needs: init
     runs-on: ubuntu-latest
@@ -39,3 +39,18 @@ jobs:
         uses: ./.github/actions/setup-and-cache
 
       - run: cd ressaite-web && npm run vercel-build
+
+  # ---------- Build ----------------------------------------------------------
+  test:
+    name: Test all packages
+    needs: init
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Load Cache
+        uses: ./.github/actions/setup-and-cache
+
+      - run: npm run test:all
