--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -2,33 +2,48 @@
   "name": "@al-un/ressaite-api",
   "version": "0.0.1",
   "description": "",
+  "author": "Al-un",
+  "license": "ISC",
   "main": "dist/index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "test": "echo \"ressaite-api test is TODO\""
-  },
-  "author": "Al-un",
-  "license": "ISC",
-  "devDependencies": {
-    "@al-un/ressaite-core": "*",
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.13.0",
-    "@types/passport": "^1.0.11",
-    "@types/passport-http-bearer": "^1.0.37",
-    "@types/passport-local": "^1.0.35",
-    "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.4"
+    "test": "npm run test:in-memory src/**/*.spec.ts",
+    "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
+    "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
+    "db:migrate": "sequelize-cli db:migrate"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.5"
+  },
+  "devDependencies": {
+    "@al-un/ressaite-core": "*",
+    "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/express": "^4.17.15",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.13.0",
+    "@types/passport": "^1.0.11",
+    "@types/passport-http-bearer": "^1.0.37",
+    "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.4",
+    "umzug": "^3.2.1"
   }
 }
