--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -38,6 +38,7 @@
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "chai": "^4.3.7",
+    "esbuild": "0.17.12",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "sqlite": "^4.1.2",
