--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "lerna": "^6.5.1",
-    "typescript": "^4.9.5"
+    "typescript": "4.9.5"
   },
   "workspaces": [
     "ressaite-api",
