--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -7,14 +7,17 @@
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "node esbuild.mjs",
+    "build:plop": "esbuild --bundle --platform=node --outfile=dist/index.js --external:bcrypt src/index.ts",
+    "build:db-helper": "node esbuild.db-helper.mjs",
     "test": "npm run test:in-memory src/**/*.spec.ts",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
     "db:sqlite:init": "node sqlite",
-    "db:migrate": "node migrator up",
-    "db:seed": "node seeder up"
+    "db:migrate": "node dist/migrator up",
+    "db:seed": "node dist/seeder up"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
@@ -38,9 +41,12 @@
     "@types/passport-http-bearer": "1.0.37",
     "@types/passport-local": "1.0.35",
     "@types/supertest": "2.0.12",
+    "aws-sdk": "2.1340.0",
     "chai": "4.3.7",
     "esbuild": "0.17.12",
     "mocha": "10.2.0",
+    "mock-aws-s3": "4.0.2",
+    "nock": "13.3.0",
     "nodemon": "2.0.21",
     "sqlite": "4.1.2",
     "sqlite3": "5.1.6",
