--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -15,30 +15,28 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.0.32",
+    "pinia": "2.0.33",
     "vite-plugin-ssr": "0.4.106",
-    "vue": "^3.2.47"
+    "vue": "3.2.47"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.0",
-    "@vue/tsconfig": "^0.1.3",
-    "cypress": "^12.7.0",
-    "eslint": "^8.34.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "start-server-and-test": "^2.0.0",
-    "typescript": "~4.8.4",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0"
+    "@rushstack/eslint-patch": "1.2.0",
+    "@types/jsdom": "21.1.1",
+    "@vitejs/plugin-vue": "4.1.0",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "11.0.2",
+    "@vue/test-utils": "2.3.2",
+    "@vue/tsconfig": "0.1.3",
+    "cypress": "12.9.0",
+    "eslint": "8.37.0",
+    "eslint-plugin-cypress": "2.13.1",
+    "eslint-plugin-vue": "9.10.0",
+    "jsdom": "21.1.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.8.7",
+    "start-server-and-test": "2.0.0",
+    "vite": "4.2.1",
+    "vitest": "0.29.8",
+    "vue-tsc": "1.2.0"
   }
 }
