--- a/ressaite-web/tsconfig.app.json
+++ b/ressaite-web/tsconfig.app.json
@@ -1,6 +1,14 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "pages/**/*.ts",
+    "pages/**/*.vue",
+    "renderer/**/*.ts",
+    "renderer/**/*.vue"
+  ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
