--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@al-un/ressaite-core": "*",
     "pinia": "2.0.33",
+    "sass": "1.60.0",
     "vite-plugin-ssr": "0.4.106",
     "vue": "3.2.47"
   },
