--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "dev:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db nodemon src/index.ts",
     "build": "node esbuild.mjs",
     "build:plop": "esbuild --bundle --platform=node --outfile=dist/index.js --external:bcrypt src/index.ts",
     "build:db-helper": "node esbuild.db-helper.mjs",
@@ -17,10 +18,12 @@
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
     "db:sqlite:init": "node sqlite",
     "db:migrate": "node dist/migrator up",
-    "db:seed": "node dist/seeder up"
+    "db:seed": "node dist/seeder up",
+    "db:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db npm run db:sqlite:init && DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db npm run db:migrate && DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db npm run db:seed"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
