--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -11,14 +11,11 @@
     "dev": "nodemon src/index.ts",
     "dev:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db nodemon src/index.ts",
     "build": "node esbuild.mjs",
-    "build:plop": "esbuild --bundle --platform=node --outfile=dist/index.js --external:bcrypt src/index.ts",
-    "build:db-helper": "node esbuild.db-helper.mjs",
     "test": "npm run test:in-memory src/**/*.spec.ts",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
-    "db:sqlite:init": "node sqlite",
-    "db:migrate": "node dist/migrator up",
-    "db:seed": "node dist/seeder up",
+    "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
+    "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts up",
     "db:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db node --loader esbuild-register/loader -r esbuild-register src/quick-start-init.ts"
   },
   "dependencies": {
