--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -9,18 +9,18 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "dev:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db PORT=8000 nodemon src/index.ts",
     "build": "node esbuild.mjs",
-    "build:plop": "esbuild --bundle --platform=node --outfile=dist/index.js --external:bcrypt src/index.ts",
-    "build:db-helper": "node esbuild.db-helper.mjs",
     "test": "npm run test:in-memory src/**/*.spec.ts",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
-    "db:sqlite:init": "node sqlite",
-    "db:migrate": "node dist/migrator up",
-    "db:seed": "node dist/seeder up"
+    "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
+    "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts up",
+    "setup:quick-start": "DB_DIALECT=sqlite DB_STORAGE=../ressaite-db/data/quick.db node --loader esbuild-register/loader -r esbuild-register src/quick-start-init.ts"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
@@ -29,7 +29,8 @@
     "pg-hstore": "2.3.4",
     "reflect-metadata": "0.1.13",
     "sequelize": "6.29.3",
-    "sequelize-typescript": "2.1.5"
+    "sequelize-typescript": "2.1.5",
+    "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "@al-un/ressaite-core": "*",
@@ -44,12 +45,11 @@
     "aws-sdk": "2.1340.0",
     "chai": "4.3.7",
     "esbuild": "0.17.12",
+    "esbuild-register": "3.4.2",
     "mocha": "10.2.0",
     "mock-aws-s3": "4.0.2",
     "nock": "13.3.0",
     "nodemon": "2.0.21",
-    "sqlite": "4.1.2",
-    "sqlite3": "5.1.6",
     "supertest": "6.3.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.2",
