--- a/ressaite-web/vercel.json
+++ b/ressaite-web/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/((?!assets/).*)",
-      "destination": "/vercel/ssr.js"
+      "destination": "/api/ssr.js"
     }
   ]
 }
