update Vercel config

--- a/ressaite-web/vercel.json
+++ b/ressaite-web/vercel.json
@@ -1,8 +1,10 @@
 {
+  "region": ["hnd1"],
   "rewrites": [
     {
       "source": "/((?!assets/).*)",
       "destination": "/api/ssr.js"
     }
-  ]
+  ],
+  "outputDirectory": "dist/client"
 }
