--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -5,7 +5,7 @@
   "type" :"module",
   "scripts": {
     "dev": "vite",
-    "dev:quick-start": "VITE_API_BASE_URL=http://localhost:8000 npm run dev",
+    "dev:quick-start": "npm run dev -- --mode=quick-start",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test": "echo \"TODO\"",
