--- a/ressaite-web/package.json
+++ b/ressaite-web/package.json
@@ -2,7 +2,7 @@
   "name": "@al-un/ressaite-web",
   "version": "0.0.0",
   "private": true,
-  "type" :"module",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:quick-start": "npm run dev -- --mode=quick-start",
@@ -24,7 +24,8 @@
     "pinia": "2.0.33",
     "sass": "1.60.0",
     "vite-plugin-ssr": "0.4.106",
-    "vue": "3.2.47"
+    "vue": "3.2.47",
+    "vue-i18n": "9.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.2.0",
