--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon src/index.ts",
     "dev:quick-start": "DOTENV_MODE=quick-start.local nodemon src/index.ts ",
     "build": "node esbuild.mjs",
-    "test": "npm run test:in-memory src/**/*.spec.ts",
+    "test": "npm run test:in-memory 'src/**/*.spec.ts'",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
     "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
