--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -14,8 +14,10 @@
     "test": "npm run test:in-memory 'src/**/*.spec.ts'",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
     "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
-    "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
-    "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts up",
+    "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts",
+    "db:migrate:up": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
+    "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts",
+    "db:seed:up": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts up",
     "setup:quick-start": "node --loader esbuild-register/loader -r esbuild-register src/quick-start-init.ts"
   },
   "dependencies": {
