--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -49,6 +49,7 @@
     "esbuild": "0.17.12",
     "esbuild-register": "3.4.2",
     "mocha": "10.2.0",
+    "mochawesome": "7.1.3",
     "mock-aws-s3": "4.0.2",
     "nock": "13.3.0",
     "nodemon": "2.0.21",
