--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -13,7 +13,7 @@
     "build": "node esbuild.mjs",
     "test": "npm run test:in-memory 'src/**/*.spec.ts'",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
-    "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
+    "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit --reporter mochawesome",
     "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts",
     "db:migrate:up": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
     "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts",
