ressaite-core: add type-check and fix errors

--- a/ressaite-core/package.json
+++ b/ressaite-core/package.json
@@ -2,6 +2,7 @@
   "name": "@al-un/ressaite-core",
   "private": true,
   "scripts": {
-    "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\""
+    "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\"",
+    "type-check": "tsc --noEmit"
   }
 }
