--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -18,7 +18,8 @@
     "db:migrate:up": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
     "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts",
     "db:seed:up": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts up",
-    "setup:quick-start": "node --loader esbuild-register/loader -r esbuild-register src/quick-start-init.ts"
+    "setup:quick-start": "node --loader esbuild-register/loader -r esbuild-register src/quick-start-init.ts",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
