--- a/ressaite-core/package.json
+++ b/ressaite-core/package.json
@@ -3,6 +3,12 @@
   "private": true,
   "scripts": {
     "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\"",
+    "test": "mocha --exit --reporter mochawesome **/*.spec.ts",
     "type-check": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "chai": "4.3.7",
+    "mocha": "10.2.0",
+    "mochawesome": "7.1.3"
   }
 }
