--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:api": "nx build @al-un/ressaite-api",
     "build:web": "nx vercel-build @al-un/ressaite-web",
     "test:all": "nx run-many -t test",
-    "type-check": "nx run-many -t type-check"
+    "type-check:all": "nx run-many -t type-check"
   },
   "devDependencies": {
     "@types/cors": "2.8.13",
