--- a/ressaite-core/package.json
+++ b/ressaite-core/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "scripts": {
     "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\"",
-    "test": "mocha --exit --reporter mochawesome **/*.spec.ts",
+    "test": "nyc --reporter=lcov --all npm run test:run './**/*.spec.ts'",
+    "test:run": "mocha  -r ts-node/register --exit",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "chai": "4.3.7",
     "mocha": "10.2.0",
-    "mochawesome": "7.1.3"
+    "nyc": "15.1.0",
+    "ts-node": "10.9.1"
   }
 }
