--- a/ressaite-api/package.json
+++ b/ressaite-api/package.json
@@ -11,9 +11,9 @@
     "dev": "nodemon src/index.ts",
     "dev:quick-start": "DOTENV_MODE=quick-start.local nodemon src/index.ts ",
     "build": "node esbuild.mjs",
-    "test": "npm run test:in-memory 'src/**/*.spec.ts'",
+    "test": "nyc --reporter=lcov npm run test:in-memory 'src/**/*.spec.ts'",
     "test:in-memory": "DB_DIALECT=sqlite DB_STORAGE=:memory: npm run test:run",
-    "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit --reporter mochawesome",
+    "test:run": "mocha -r ts-node/register -r src/mocha-root.ts --timeout 10000 --exit",
     "db:migrate": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts",
     "db:migrate:up": "node --loader esbuild-register/loader -r esbuild-register src/migrator.ts up",
     "db:seed": "node --loader esbuild-register/loader -r esbuild-register src/seeder.ts",
@@ -50,7 +50,6 @@
     "esbuild": "0.17.12",
     "esbuild-register": "3.4.2",
     "mocha": "10.2.0",
-    "mochawesome": "7.1.3",
     "mock-aws-s3": "4.0.2",
     "nock": "13.3.0",
     "nodemon": "2.0.21",
