--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -25,9 +25,38 @@ jobs:
       - name: Setup & Cache
         uses: ./.github/actions/setup-and-cache
 
-  # ---------- Build ----------------------------------------------------------
-  build-web:
-    name: Build Ressaite Web
+  # # ---------- Build ----------------------------------------------------------
+  # build-web:
+  #   name: Build Ressaite Web
+  #   needs: init
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+
+  #     - name: Load Cache
+  #       uses: ./.github/actions/setup-and-cache
+
+  #     - run: npm run type-check
+  #     - run: npm run build:web
+  # build-api:
+  #   name: Build Ressaite API
+  #   needs: init
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+
+  #     - name: Load Cache
+  #       uses: ./.github/actions/setup-and-cache
+
+  #     - run: npm run build:api
+
+  # ---------- CI -------------------------------------------------------------
+  ci:
+    name: Check all packages integration
     needs: init
     runs-on: ubuntu-latest
 
@@ -38,33 +67,11 @@ jobs:
       - name: Load Cache
         uses: ./.github/actions/setup-and-cache
 
-      - run: npm run type-check
-      - run: npm run build:web
-  build-api:
-    name: Build Ressaite API
-    needs: init
-    runs-on: ubuntu-latest
+      - name: Run build check
+        run: npm run build:all
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Run type check
+        run: npm run type-check:all
 
-      - name: Load Cache
-        uses: ./.github/actions/setup-and-cache
-
-      - run: npm run build:api
-
-  # ---------- Build ----------------------------------------------------------
-  test:
-    name: Test all packages
-    needs: init
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Load Cache
-        uses: ./.github/actions/setup-and-cache
-
-      - run: npm run test:all
+      - name: Run test
+        run: npm run test:all
