--- a/ressaite-core/package.json
+++ b/ressaite-core/package.json
@@ -2,6 +2,15 @@
   "name": "@al-un/ressaite-core",
   "private": true,
   "scripts": {
-    "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\""
+    "setup:quick-start": "echo \"Nothing to do in the ressaite-core package\"",
+    "test": "nyc --reporter=lcov --all npm run test:run './**/*.spec.ts'",
+    "test:run": "mocha  -r ts-node/register --exit",
+    "type-check": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "chai": "4.3.7",
+    "mocha": "10.2.0",
+    "nyc": "15.1.0",
+    "ts-node": "10.9.1"
   }
 }
