--- a/.github/workflows/code_check.yaml
+++ b/.github/workflows/code_check.yaml
@@ -27,7 +27,7 @@ jobs:
 
   # # ---------- Build ----------------------------------------------------------
   # build-web:
-  #   name: Build Ressaite Web
+  #   name: Build Recitry Web
   #   needs: init
   #   runs-on: ubuntu-latest
 
@@ -41,7 +41,7 @@ jobs:
   #     - run: npm run type-check
   #     - run: npm run build:web
   # build-api:
-  #   name: Build Ressaite API
+  #   name: Build Recitry API
   #   needs: init
   #   runs-on: ubuntu-latest
 
